--- a/src/resume/page.scss
+++ b/src/resume/page.scss
@@ -48,5 +48,9 @@
   .row-section {
     padding-bottom: 20px;
     border-bottom: 1px solid lightgray;
+
+    &.no-border {
+      border-bottom: none;
+    }
   }
 }
