--- a/src/resume/page.scss
+++ b/src/resume/page.scss
@@ -3,12 +3,17 @@
     background-color: white;
     margin-top: 100px;
     margin-bottom: 100px;
-    padding: 25px;
+    padding: 80px;
 
     @media (max-width: 997px) {
       margin: 0 auto;
       width: 100%;
       box-shadow: none;
+      padding: 50px;
+    }
+
+    @media (max-width: 600px) {
+      padding: 25px;
     }
   }
 
