--- a/src/index.scss
+++ b/src/index.scss
@@ -2,5 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: #fafafa;
+
+  @media (min-width: 998px) {
+    background-color: #fafafa;
+  }
 }
